Implemented base page.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Ofek Atar" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@500;700&family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Fancy Animations</title>
   </head>
-  <body></body>
+
+  <body>
+    <main>
+      <section class="landing">
+        <nav class="navbar">
+          <h1 id="logo">Witcher 3</h1>
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <h2 class="big-title">Wild Hunt</h2>
+      </section>
+    </main>
+    <div class="intro">
+      <div class="intro-text">
+        <h1 class="hide">
+          <span class="text">Evil is Evil.</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text"> Lesser, greater, middling…</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text">Makes no difference.</span>
+        </h1>
+        <h1 class="hide">
+          <span class="text"
+            >If I’m to choose between one evil and another…</span
+          >
+        </h1>
+        <h1 class="hide">
+          <span class="text">I’d rather not choose at all.</span>
+        </h1>
+      </div>
+    </div>
+    <div class="slider"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
+    <script src="./scripts/index.js"></script>
+  </body>
 </html>
